--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-Test
+<div class="main">
+  <div class="container">
+    <div class="head">
+      <div class="head_logo">
+        <img src="resources/images/logo-white.png">
+      </div>
+      <div class="head_text">
+        <span>Tortoiseshelll Optics</span>
+        <div class="links">
+        <span>Services</span>
+        <span>Products</span>
+        <span>Contacts</span>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
   </body>
 </html>
