--- a/index.html
+++ b/index.html
@@ -8,21 +8,60 @@
   </head>
   <body>
 <div class="main">
-  <div class="container">
-    <div class="head">
-      <div class="head_logo">
-        <img src="resources/images/logo-white.png">
+  <div class="background">
+    <div class="container">
+      <div class="head">
+        <div class="head_logo">
+          <img src="resources/images/logo-white.png">
+        </div>
+        <div class="head_text">
+          <span>Tortoiseshelll Optics</span>
+          <div class="links">
+            <span>Services</span>
+            <span>Products</span>
+            <span>Contacts</span>
+          </div>
+        </div>
+        <div class="menu">
+          Menu
+        </div>
       </div>
-      <div class="head_text">
-        <span>Tortoiseshelll Optics</span>
-        <div class="links">
-        <span>Services</span>
-        <span>Products</span>
-        <span>Contacts</span>
-      </div>
+
+    <div class="banner">
+      <h2>DON'T JUST LOOK, SEE.</h2>
     </div>
+    </div>
+  </div>
+  <div class="services">
+    <div class="service">
+      <img src="resources/images/paper-icon.png" class="paper">
+      <div>Comprehensive Exams</div>
+   </div>
+   <div class="service">
+    <img src="resources/images/ruler-icon.png">
+    <div>Custom Fittings</div>
+  </div>
+  <div class="service">
+    <img src="resources/images/truck-icon.png">
+    <div>Fast Delivery</div>
+  </div>
+</div>
+<div class="about">
+  <div class="about_box">
+    <h4>PHILOSOPHY</h4>
+    <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+  </div>
+  <div class="about_box">
+    <h4>APPOINTMENTS</h4>
+    <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
   </div>
 </div>
 </div>
+<footer>
+<div class="container">
+    <img src="resources/images/logo-black.png">
+    <span>Tortoiseshelll Optics</span>
+</div>
+</footer>
   </body>
 </html>
